--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
